--- a/FE/index.html
+++ b/FE/index.html
@@ -2,46 +2,29 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Star Admin2 </title>
-  <!-- plugins:css -->
-  <link rel="stylesheet" href="src/assets/admin/vendors/feather/feather.css">
-  <link rel="stylesheet" href="src/assets/admin/vendors/mdi/css/materialdesignicons.min.css">
-  <link rel="stylesheet" href="src/assets/admin/vendors/ti-icons/css/themify-icons.css">
-  <link rel="stylesheet" href="src/assets/admin/vendors/typicons/typicons.css">
-  <link rel="stylesheet" href="src/assets/admin/vendors/simple-line-icons/css/simple-line-icons.css">
-  <link rel="stylesheet" href="src/assets/admin/vendors/css/vendor.bundle.base.css">
-  <!-- endinject -->
-  <!-- Plugin css for this page -->
-  <link rel="stylesheet" href="src/assets/admin/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
-  <link rel="stylesheet" type="text/css" href="src/assets/admin/js/select.dataTables.min.css">
-  <!-- End plugin css for this page -->
-  <!-- inject:css -->
-  <link rel="stylesheet" href="src/assets/admin/css/vertical-layout-light/style.css">
-  <!-- endinject -->
-  <link rel="shortcut icon" href="src/assets/admin/images/favicon.png" />
-</head>
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Redirect</title>
+  <script>
+    // Giả sử bạn có một hàm để kiểm tra quyền của người dùng
+    function getUserRole() {
+      // Logic để lấy quyền của người dùng, ví dụ từ localStorage hoặc API
+      return 'admin'; // hoặc 'user'
+    }
 
-  <script src="src/assets/admin/vendors/js/vendor.bundle.base.js"></script>
-  <script src="src/assets/admin/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js"></script>
-  <!-- endinject -->
-  <!-- Plugin js for this page -->
-  <script src="src/assets/admin/vendors/chart.js/Chart.min.js"></script>
-  <script src="src/assets/admin/vendors/progressbar.js/progressbar.min.js"></script>
-  <!-- End plugin js for this page -->
-  <!-- inject:js -->
-  <script src="src/assets/admin/js/off-canvas.js"></script>
-  <script src="src/assets/admin/js/hoverable-collapse.js"></script>
-  <script src="src/assets/admin/js/template.js"></script>
-  <script src="src/assets/admin/js/settings.js"></script>
-  <script src="src/assets/admin/js/todolist.js"></script>
-  <!-- endinject -->
-  <!-- Custom js for this page-->
-  <script src="src/assets/admin/js/jquery.cookie.js" type="text/javascript"></script>
-  <script src="src/assets/admin/js/dashboard.js"></script>
-  <script src="src/assets/admin/js/proBanner.js"></script></body>
+    document.addEventListener('DOMContentLoaded', function () {
+      const role = getUserRole();
+      if (role === 'admin') {
+        window.location.href = '/src/pages/admin.html';
+      } else {
+        window.location.href = '/user.html';
+      }
+    });
+  </script>
+</head>
+
+<body>
+  <h1>Loading...</h1>
+</body>
+
+</html>
