update Trang chu

--- a/Trangchuv.01/index.html
+++ b/Trangchuv.01/index.html
@@ -35,7 +35,7 @@
        padding: 0;
    }
    </style>
-  <title>Trang Chủ</title>
+  <title>Trang chủ</title>
 </head>
 <body>
   <div class="trang-ch">
@@ -105,37 +105,7 @@
       </div>
     </div>
     <div class="_1-section">
-      <div class="_1-bg"></div>
-      <div class="nav-bar">
-        <div class="rectangle-1"></div>
-        <div class="navigation">
-          <div class="nav-items">
-            <div class="logo">
-              <div class="oskin-tr-m-n-chu-n-y-khoa2">
-                <span>
-                  <span class="oskin-tr-m-n-chu-n-y-khoa-2-span"></span>
-                  <span class="oskin-tr-m-n-chu-n-y-khoa-2-span2">
-                    OSKIN
-                    <br />
-                  </span>
-                  <span class="oskin-tr-m-n-chu-n-y-khoa-2-span3">
-                    TRỊ MỤN CHUẨN Y KHOA
-                  </span>
-                </span>
-              </div>
-            </div>
-            <div class="trang-ch2">Trang chủ</div>
-            <div class="s-n-ph-m2">Sản phẩm</div>
-            <div class="t-l-ch-t-v-n">Đặt lịch tư vấn</div>
-            <div class="mua-h-ng">Mua hàng</div>
-            <div class="chu-n-o-n">Chuẩn đoán</div>
-          </div>
-          <div class="sign-in">
-            <div class="ng-nh-p">Đăng nhập</div>
-            <img class="vector" src="vector0.svg" />
-          </div>
-        </div>
-      </div>
+      <img class="_1-bg" src="_1-bg0.svg" />
       <div class="home-text">
         <div class="tr-m-n-chu-n-y-khoa">
           <span>
@@ -167,6 +137,36 @@
         <div class="image-042">
           <img class="ellipse-2" src="ellipse-20.png" />
           <div class="ellipse-8"></div>
+        </div>
+      </div>
+      <div class="nav-bar">
+        <div class="rectangle-1"></div>
+        <div class="navigation">
+          <div class="nav-items">
+            <div class="logo">
+              <div class="oskin-tr-m-n-chu-n-y-khoa2">
+                <span>
+                  <span class="oskin-tr-m-n-chu-n-y-khoa-2-span"></span>
+                  <span class="oskin-tr-m-n-chu-n-y-khoa-2-span2">
+                    OSKIN
+                    <br />
+                  </span>
+                  <span class="oskin-tr-m-n-chu-n-y-khoa-2-span3">
+                    TRỊ MỤN CHUẨN Y KHOA
+                  </span>
+                </span>
+              </div>
+            </div>
+            <div class="trang-ch2">Trang chủ</div>
+            <div class="s-n-ph-m2">Sản phẩm</div>
+            <div class="t-l-ch-t-v-n">Đặt lịch tư vấn</div>
+            <div class="mua-h-ng">Mua hàng</div>
+            <div class="chu-n-o-n">Chuẩn đoán</div>
+          </div>
+          <div class="sign-in">
+            <div class="ng-nh-p">Đăng nhập</div>
+            <img class="vector" src="vector0.svg" />
+          </div>
         </div>
       </div>
     </div>
